Fix HID not workey